# dbt-break-detector

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: dbt-break-check.yml  main.yml
requirements/: base.txt  dev.txt  test.txt
src/: analyzer.py  cli.py
src/models/: breaking_change.py
src/parsers/: manifest_parser.py  sql_parser.py
src/utils/: dag_utils.py  git_utils.py  pr_updates.py
tests/: conftest.py  test_analyzer.py
